@startuml Dozaluno

title Dozaluno

entity pessoa{
    pk_pessoa INTEGER <<PK>> NOT NULL
    --
    nome_pessoa VARCHAR(200) NOT NULL
    cpf VARCHAR(20) NOT NULL
    cod_matricula VARCHAR(20) NOT NULL UNIQUE
    endereco TEXT
}

entity aluno{
    pk_pessoa INTEGER <<FK>> NOT NULL
    pk_curso INTEGER <<FK>> NOT NULL
    pk_turma INTEGER <<FK>> NOT NULL
    --
}

entity professor{
    pk_pessoa INTEGER <<FK>> NOT NULL
    --
    titulacao TEXT NOT NULL
    disponibilidade INTEGER NOT NULL
}

entity curso{
    pk_curso INTEGER <<PK>> NOT NULL
    --
    nome_curso VARCHAR(100) NOT NULL
    area VARCHAR(100) NOT NULL
}

entity disciplina{
    pk_disciplina INTEGER <<PK>> NOT NULL
    pk_professor INTEGER <<FK>> NOT NULL
    pk_sala INTEGER <<FK>> NOT NULL 
    --
    nome_disciplina VARCHAR(100) NOT NULL
}

entity curso_disciplina{
    pk_curso_disciplina INTEGER <<PK>> NOT NULL
    pk_curso INTEGER <<FK>> NOT NULL
    pk_disciplina <<FK>> NOT NULL
    --
}

entity sala{
    pk_sala INTEGER <<PK>> NOT NULL
    --
    nome_sala VARCHAR(100) NOT NULL
    capacidade INTEGER NOT NULL
}

entity turma{
    pk_turma INTEGER <<PK>> NOT NULL
    pk_professor INTEGER <<FK>> NOT NULL
    pk_curso INTEGER <<FK>> NOT NULL
    --
    semestre INTEGER NOT NULL
}

entity comodidade{
    pk_comodidade INTEGER <<PK>> NOT NULL
    --
    nome_comodidade VARCHAR(100) NOT NULL
}

entity comodidade_sala{
    pk_comodidade_sala INTEGER <<PK>> NOT NULL
    pk_comodidade INTEGER <<FK>> NOT NULL
    pk_sala INTEGER <<FK>> NOT NULL
}


pessoa ||--o{ aluno
pessoa ||--o{ professor
aluno }o--|| curso

curso ||--o{ curso_disciplina
disciplina ||--o{ curso_disciplina

comodidades  ||--o{ comodidades_sala
sala ||--o{ comodidades_sala

sala ||--o{ disciplina

professor ||--o{ turma
professor ||--|{ disciplina

aluno }|--|| turma

curso ||--o{ turma

@enduml 